# git-compare-tool

./: README.md  index.html  package.json  pnpm-lock.yaml
.cargo/: config.toml
.github/workflows/: build.yml
docs/plans/: 2026-05-12-git-compare-tool-design.md  2026-05-12-git-compare-tool-plan.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: git.rs  mod.rs  workspace.rs
src-tauri/src/config/: mod.rs  store.rs
src-tauri/src/git/: branches.rs  diff.rs  log.rs  mod.rs  runner.rs
src/api/: config.ts  git.ts
src/components/: AppMenu.vue  BranchPicker.vue  BranchTreeNode.vue  CommitGraph.vue  DiffViewer.vue  FileChangeList.vue  FileChangeTree.vue  WorkspaceEditModal.vue  WorkspaceSidebar.vue
src/router/: index.ts
src/stores/: diff.ts  repo.ts  settings.ts  workspaces.ts
src/types/: index.ts
src/views/: RepoDetail.vue  Settings.vue  Welcome.vue
